--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,9 @@
 ---
 ---
-@import "minima/initialize";
 $text-color: #f2f2f2 !default;
+$brand-color: #a78bfa !default;
+$background-color: #0b0b0c !default;
+@import "minima/initialize";
 @import "minima/skins/dark";
 
 html, body {
