--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,9 @@
 ---
 ---
-$text-color: #f2f2f2 !default;
-$brand-color: #a78bfa !default;
-$background-color: #0b0b0c !default;
+$brand-color:       #a78bfa !default;
+$link-base-color:   #a78bfa !default;
+$text-color:        #f2f2f2 !default;
+$background-color:  #0b0b0c !default;
 @import "minima/initialize";
 @import "minima/skins/dark";
 
