--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,13 @@
 ---
 ---
-$brand-color:       #a78bfa !default;
-$link-base-color:   #a78bfa !default;
-$text-color:        #f2f2f2 !default;
-$background-color:  #0b0b0c !default;
+$brand-color:           #a78bfa !default;
+$link-base-color:       #a78bfa !default;
+$link-visited-color:    #f472b6 !default;
+$text-color:            #f2f2f2 !default;
+$background-color:      #0b0b0c !default;
+$grey-color:            #9ca3af !default;
+$grey-color-light:      #374151 !default;
+$grey-color-dark:       #111827 !default;
 @import "minima/initialize";
 @import "minima/skins/dark";
 
