--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,7 @@
 $brand-color:           #a78bfa !default;
 $link-base-color:       #a78bfa !default;
 $link-visited-color:    #f472b6 !default;
+$link-hover-color:      #ffffff !default;
 $text-color:            #f2f2f2 !default;
 $background-color:      #0b0b0c !default;
 $grey-color:            #9ca3af !default;
