--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,9 @@ $background-color:      #0b0b0c !default;
 $grey-color:            #9ca3af !default;
 $grey-color-light:      #374151 !default;
 $grey-color-dark:       #111827 !default;
+$border-color-01:       #374151 !default;
+$border-color-02:       #4b5563 !default;
+$border-color-03:       #1f2937 !default;
 @import "minima/initialize";
 @import "minima/skins/dark";
 
