--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,24 @@ $code-background-color: #1a1a1b !default;
 $table-zebra-color:     #161617 !default;
 $table-header-color:    #212122 !default;
 $table-header-font-color: #ffffff !default;
+$brand-color:           #a78bfa !default;
+$link-base-color:       #a78bfa !default;
+$link-visited-color:    #f472b6 !default;
+$link-hover-color:      #ffffff !default;
+$text-color:            #f2f2f2 !default;
+$background-color:      #0b0b0c !default;
+$grey-color:            #9ca3af !default;
+$grey-color-light:      #374151 !default;
+$grey-color-dark:       #111827 !default;
+$border-color-01:       #374151 !default;
+$border-color-02:       #4b5563 !default;
+$border-color-03:       #1f2937 !default;
+$code-background-color: #1a1a1b !default;
+$table-text-color:      #f2f2f2 !default;
+$table-zebra-color:     #161617 !default;
+$table-header-color:    #212122 !default;
+$table-header-font-color: #ffffff !default;
+
 @import "minima/initialize";
 @import "minima/skins/dark";
 
