--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,9 @@ html, body {
   margin: 0;
   background: #0b0b0c !important;
   color: #f2f2f2 !important;
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
   font-family: Inter, Arial, sans-serif;
   text-align: center;
 }
