--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,9 @@
 ---
 ---
-html, body {
+@import "minima/initialize";
+@import "minima/skins/dark";
+
+home-layout {
   height: 100%;
   margin: 0;
   background: #0b0b0c !important;
