--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,7 +33,7 @@ home-layout {
   animation: typing 2s steps(14) forwards, blink 0.5s step-end infinite alternate;
   
 
-  background: linear-gradient(90deg, #a78bfa, #f472b6, #6b38c9) !important; 
+  background: linear-gradient(90deg, #a78bfa, #f472b6) !important; 
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: transparent !important;
   background-size: 300% 100%;
