--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,7 +26,7 @@ border-right: 3px solid #a78bfa;
 white-space: nowrap;
 overflow: hidden;
 width: 0;
-background: linear-gradient(90deg, #a78bfa, #f472b6, #6b38c9) !important;
+background: linear-gradient(90deg, #a78bfa, #f472b6) !important;
 -webkit-background-clip: text !important;
 -webkit-text-fill-color: transparent !important;
 background-size: 300% 100%;
