--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -8,6 +8,16 @@ html, body {
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p, a, li, span {
+h1, h2, h3, h4, p, a, li {
   font-family: Inter, Arial, sans-serif !important;
+}
+
+.wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px 20px;
+}
+
+a {
+  color: #a78bfa !important;
 }
