--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -3,21 +3,19 @@
 html, body {
   background-color: #0b0b0c !important;
   color: #f2f2f2 !important;
-  font-family: Inter, Arial, sans-serif !important;
-  margin: 0;
-  padding: 0;
+  font-family: 'Inter', Arial, sans-serif !important;
 }
 
-h1, h2, h3, h4, p, a, li {
-  font-family: Inter, Arial, sans-serif !important;
-}
-
-.wrapper {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 40px 20px;
+h1, h2, h3, h4, p, a, li, span, .post-title, .post-content {
+  font-family: 'Inter', Arial, sans-serif !important;
+  color: #f2f2f2 !important;
 }
 
 a {
   color: #a78bfa !important;
+}
+
+.wrapper, .site-header, .site-footer {
+  background-color: #0b0b0c !important;
+  border: none !important;
 }
