--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -2,7 +2,7 @@
 ---
 html, body {
   background-color: #0b0b0c !important;
-  color: #f2f2f2 !important;
+  color: #19191c !important;
   font-family: 'Inter', Arial, sans-serif !important;
 }
 
@@ -11,9 +11,9 @@ h1, h2, h3, h4, p, a, li, span, .post-title, .post-content {
   color: #f2f2f2 !important;
 }
 
-/*a {
+a {
   color: #a78bfa !important;
-} */
+} 
 
 .wrapper, .site-header, .site-footer {
   background-color: #0b0b0c !important;
