--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -1,7 +1,7 @@
 ---
 ---
 html, body {
-  background-color: #0b0b0c !important;
+  background-color: #19191c !important;
   color: #19191c !important;
   font-family: 'Inter', Arial, sans-serif !important;
 }
