--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -16,6 +16,6 @@ a {
 } 
 
 .wrapper, .site-header, .site-footer {
-  background-color: #0b0b0c !important;
+  background-color: #19191c !important;
   border: none !important;
 }
