--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -1,14 +1,14 @@
 ---
 ---
 html, body {
-  background-color: #19191c !important;
+  background-color: #101010 !important;
   color: #19191c !important;
   font-family: 'Inter', Arial, sans-serif !important;
 }
 
 h1, h2, h3, h4, p, a, li, span, .post-title, .post-content {
   font-family: 'Inter', Arial, sans-serif !important;
-  color: #f2f2f2 !important;
+  color: #101010 !important;
 }
 
 a {
@@ -16,6 +16,6 @@ a {
 } 
 
 .wrapper, .site-header, .site-footer {
-  background-color: #19191c !important;
+  background-color: #101010 !important;
   border: none !important;
 }
