--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 .home-layout {
 height: 100%;
 margin: 0;
-background: #0b0b0c !important;
+background: #101010 !important;
 color: #f2f2f2 !important;
 padding: 0;
 min-height: 100vh;
