--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -8,7 +8,7 @@ html, body {
 
 h1, h2, h3, h4, p, a, li, span, .post-title, .post-content {
   font-family: 'Inter', Arial, sans-serif !important;
-  color: #101010 !important;
+  color: #dfdfdf !important;
 }
 
 a {
