--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -2,7 +2,7 @@
 ---
 html, body {
   background-color: #101010 !important;
-  color: #19191c !important;
+  color: #101010 !important;
   font-family: 'Inter', Arial, sans-serif !important;
 }
 
