--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,22 @@
 <link rel="stylesheet" href="{{ '/assets/css/blog.css' | relative_url }}">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+<style>
+  .site-title {
+    background-image: url("https://raw.githubusercontent.com/gvcxm2j5KQbrnl/avalanches.wtf/refs/heads/main/assets/logo.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: left center;
+    color: transparent !important;
+    display: inline-block;
+    width: 150px;
+    height: 40px; 
+    overflow: hidden;
+    vertical-align: middle;
+  }
+
+  .site-title:hover {
+    text-decoration: none;
+    opacity: 0.8;
+  }
+</style>
