--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,6 @@
 <link rel="stylesheet" href="{{ '/assets/css/blog.css' | relative_url }}">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+<a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+  <img src="{{ site.avatar | relative_url }}" alt="{{ site.title }}" style="height: 40px; width: auto;">
+</a>
