--- a/assets/css/blog.scss
+++ b/assets/css/blog.scss
@@ -25,14 +25,14 @@ header .site-title:visited {
     background-repeat: no-repeat !important;
     background-size: contain !important;
     background-position: left center !important;
-    color: rgba(0,0,0,0) !important; 
+    color: transparent !important; 
     display: inline-block !important;
-    width: 200px !important; 
-    height: 50px !important;  
+    width: 300px !important; 
+    height: 80px !important;  
+    margin-left: -20px !important; 
     overflow: hidden !important;
     text-indent: -9999px !important; 
 }
-
 header .site-title:hover {
     opacity: 0.7 !important;
     text-decoration: none !important;
