--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,5 @@
+---
+---
 .home-layout {
     height: 100%;
     margin: 0;
@@ -15,7 +17,7 @@
     max-width: 720px;
     margin: 0 auto;
     padding: 40px 20px;
-    min-height: 120vh !important;
+    min-height: 120vh !important; 
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,7 +38,6 @@
     animation: typing 2s steps(14) forwards, blink 0.5s step-end infinite alternate, gradient-animation 4s linear infinite;
 }
 
-/* Elements */
 .socials {
     display: flex;
     justify-content: center;
@@ -50,6 +51,7 @@
     height: auto !important;
 }
 
+/* THM Badge */
 .badge-thm-wrapper img {
     max-width: 280px;
     height: auto;
@@ -70,7 +72,6 @@ a {
     color: #a78bfa !important;
     text-decoration: none;
 }
-
 .home-layout footer {
     padding: 40px 0 20px;
     color: #9ca3af;
